--- a/src/work/readme
+++ b/src/work/readme
@@ -1,3 +1,5 @@
+https://github.com/GALI17/Assessment_F
+
 The project calculates the similarity of logical expressions
 
 Input data:
@@ -9,10 +11,9 @@ file>res
 Note: The name of 1-9 in the result of finalRes.java is changed to 01-09, and the name of 100 is changed to 999.
 In order to ensure that the output results are one-to-one correspondence, because eclipse calculation is performed according to the serial number from small to large.
 For example: pres1.txt > pres01.txt
-Uploaded data has changed.
 
 Modify parameters to perform statistics on phenotypes and loci:
 1)name = "30-26" //Data set being executed
 2)app.GetRealExp("file\\logic\\Slogic" + name + ".txt")//Pre-set logical expression
-3)new File("E:\\PSOlab\\" + name + "\\res\\finals")// Detected logical expression
+3)new File("E:\\PSOlab\\" + name + "\\res\\finals")// Algorithm result
 4)new FileOutputStream("file\\res\\S" + name + ".txt") //Output path
